<resources>
    <string name="app_name">NewBuy</string>
    <string name="content_to_request_permission">保证应用正常运行，请授予必要权限！</string>
    <string name="attention">提示</string>
    <string name="ok">好的~</string>

    <string name="tips_net_error">你的网络信号被外星人劫持了\n点击重试</string>
    <string name="tips_content_empty">空空如野</string>
    <string name="loading_busy">努力加载中...</string>

    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>


    <!-- 底部导航栏-->

    <!-- 底部导航栏-->

    <string name="title_home">首页</string>
    <string name="title_sort">分类</string>
    <string name="title_life">生活圈</string>
    <string name="title_cart">购物车</string>
    <string name="title_me">我的</string>

    <!-- 登录界面-->
    <string name="passwd">密码</string>
    <string name="username">用户名/手机号码</string>
    <string name="login">登录</string>
    <!-- 注册界面-->
    <string name="registered_title">注册</string>
    <string name="registered_phone">手机号</string>
    <string name="next_step">下一步</string>
    <string name="phone_hint">*中国大陆11位手机号</string>
    <string name="verify_hint">*区分大小写</string>
    <string name="registered_id">身份证号</string>
    <string name="registered_name">姓名</string>
    <string name="name_hint">*请填写真实姓名</string>
    <string name="id_hint">*请填写有效身份证号</string>
    <string name="skip">跳过</string>
    <string name="registered_usename">用户名</string>
    <string name="registered_passwd">密码</string>
    <string name="registered_confirm_passwd">确认密码</string>
    <string name="username_hint">*用户名由4-20位的字母数字和汉字组成，不能包含其它符号，不区分大小写</string>
    <string name="passwd_hint">*密码长度不小于6位</string>
    <string name="passwd_confirm_hint">*再次输入密码以确认</string>
    <!-- 我的界面-->
    <string name="myinfo_login_hint">请点击登录</string>
    <string name="raw_passwd">旧密码</string>
    <string name="new_passwd">新密码</string>
    <string name="new_passwd_confirm">确认新密码</string>
    <string name="change_passwd">修改密码</string>
    <string name="unlogin">注销</string>
    <string name="portrait">头像</string>
    <string name="commit">提交</string>
    <string name="collection">收藏宝贝</string>
    <string name="order">全部订单</string>
    <string name="assess">评价</string>
    <string name="my_wallet">我的钱包</string>
    <string name="rest_money">余额</string>
    <string name="card_package">卡包</string>
    <string name="about">关于双线购</string>
    <string name="service">客服中心</string>
    <string name="address">收货地址</string>
    <string name="change_add">添加/修改</string>
    <string name="focus">关注店铺</string>

</resources>
