<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registered_name_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registered_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_hint"/>
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registered_id_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registered_id"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_hint"/>
    <Button
        android:textSize="18sp"
        android:text="@string/next_step"
        android:id="@+id/identity_nextstep_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button_selector" />
    <TextView
        android:id="@+id/skip_view"
        android:textSize="@dimen/text_size_mid"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"/>
</LinearLayout>