<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/portrait_image"
            android:layout_width="@dimen/head_portrait_big"
            android:layout_height="@dimen/head_portrait_big"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/defulat_portrait" />
        <ImageView
            android:id="@+id/gender_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:src="@mipmap/gender_male"
            android:layout_alignRight="@+id/portrait_image"
            android:layout_alignEnd="@+id/portrait_image" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registered_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registered_usename"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_hint"/>
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:paddingStart="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registered_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwd_hint"/>
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/registered_confirm_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registered_confirm_passwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwd_confirm_hint"/>
    <Button
        android:textSize="@dimen/text_size_mid"
        android:text="@string/registered_title"
        android:id="@+id/login_info_nextstep_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button_selector" />
</LinearLayout>