<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/splitline_color"
    tools:context="com.lovegod.newbuy.view.myinfo.changeinfo.ChangePasswdActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/change_passwd_toolbar"
        android:background="@color/white_FFFFFF"
        app:title="@string/change_passwd"
        app:navigationIcon="@mipmap/ic_back_black"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="40dp"
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/raw_passwd_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/raw_passwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_passwd_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_passwd"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:text="@string/passwd_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_passwdconfirm_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_passwd_confirm"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_marginLeft="15dp"
        android:text="@string/passwd_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:textSize="@dimen/text_size_mid"
        android:text="@string/commit"
        android:id="@+id/commit_change_passwd_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_button_selector" />
</LinearLayout>
