<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splitline_color"
    android:orientation="vertical"
    tools:context="com.lovegod.newbuy.view.myinfo.MoreInfoActivity">

    <android.support.v7.widget.Toolbar
        app:navigationIcon="@mipmap/ic_back_black"
        android:id="@+id/more_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white_FFFFFF"
        app:title="个人信息" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:background="@color/white_FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="12dp"
                android:text="@string/portrait"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="@dimen/text_size_min"
                android:textColor="@color/black_000000"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/nav_item_height" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/more_info_portrait"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:layout_width="@dimen/head_portrait_medium"
                android:layout_height="@dimen/head_portrait_medium" />
        </RelativeLayout>
        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/splitline_color"/>

        <com.lovegod.newbuy.view.myview.ItemTextLayout
            android:id="@+id/more_info_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text_left_text="@string/registered_usename"/>

        <com.lovegod.newbuy.view.myview.ItemTextLayout
            android:id="@+id/more_info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text_left_text="@string/address"
            app:text_right_text="@string/change_add"/>

    </LinearLayout>

    <Button
        android:id="@+id/un_login_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_button_selector"
        android:text="@string/unlogin"
        android:textSize="@dimen/text_size_mid" />
</LinearLayout>
