<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.lovegod.newbuy.view.LoginActivity">
    <ImageView
        android:id="@+id/login_logo"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo_anim_vector"
        android:layout_gravity="center"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/colorPrimary"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username"
                android:hint="@string/username"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/colorPrimary"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwd"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
            <Button
                android:textSize="18sp"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/login_button_selector" />
            <TextView
                android:id="@+id/registered_text"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_min"
                android:gravity="center"
                android:text="注册"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/forget_passwd_text"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_min"
                android:gravity="center"
                android:text="找回密码"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>